Dashborad para daministracion de usuarios y movers

--- a/src/css/mover.css
+++ b/src/css/mover.css
@@ -40,3 +40,8 @@ body {
     border-radius: 10px;
     background: #00FA9A;
 }
+
+.form-edit-mover .mt-5.d-block {
+    flex-basis: 100%;
+    width: 100%;
+}
